--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
         <div class="container">
             <nav class="navbar navbar-dark bg-transparenet">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/images/logo.svg" alt="logo">
+<!--                     <img src="assets/images/logo.svg" alt="logo"> -->
                 </a>
-                <span class="navbar-text ml-auto d-none d-sm-inline-block">978-130-5444 </span>
-                <span class="navbar-text d-none d-sm-inline-block">jerald_glover@glennie.tv</span>
+                <span class="navbar-text ml-auto d-none d-sm-inline-block">970-025-8929 </span>
+                <span class="navbar-text d-none d-sm-inline-block">sales@annapurnaengineers.com</span>
             </nav>
         </div>
     </header>
     <main class="my-auto">
         <div class="container">
             <h1 class="page-title">We're coming soon</h1>
-            <p class="page-description">Lorem ipsum dolor sit amet consectetur adipisicing elit sed eiu sit amet consectetur
+            <p class="page-description"> Being a quality oriented firm, we provide best quality products which include Hydro Cyclone, Stone Crusher Plant, Vibrating Screen, Vertical Shaft Impactor, Cone Crusher, Jaw Crusher, etc. 
+                Our products stand for quality, reliability and durability as we procure raw materials from quality certified suppliers.
             </p>
             <p>Stay connected</p>
             <nav class="footer-social-links">
