--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BootstrapDash Comingsoon Template</title>
+    <title>Annapurna Engineers</title>
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -32,13 +32,13 @@
                 Our products stand for quality, reliability and durability as we procure raw materials from quality certified suppliers.
             </p>
             <p>Stay connected</p>
-            <nav class="footer-social-links">
+<!--             <nav class="footer-social-links">
                 <a href="#!" class="social-link"><i class="mdi mdi-facebook-box"></i></a>
                 <a href="#!" class="social-link"><i class="mdi mdi-twitter"></i></a>
                 <a href="#!" class="social-link"><i class="mdi mdi-google"></i></a>
                 <a href="#!" class="social-link"><i class="mdi mdi-slack"></i></a>
                 <a href="#!" class="social-link"><i class="mdi mdi-skype"></i></a>
-            </nav>
+            </nav> -->
         </div>
     </main>
 </body>
