--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 Our products stand for quality, reliability and durability as we procure raw materials from quality certified suppliers.
             </p>
             <p>Stay connected</p>
+            <p>sales@annapurnaengineers.com</p>
 <!--             <nav class="footer-social-links">
                 <a href="#!" class="social-link"><i class="mdi mdi-facebook-box"></i></a>
                 <a href="#!" class="social-link"><i class="mdi mdi-twitter"></i></a>
